# litestar-admin

./: .gitignore  _main.py  docker-compose.yml  main.py  pyproject.toml  test.sqlite
app/api/: register_routers.py
app/cli/: commands.py
app/common/: constant.py  enums.py  exceptions.py  response.py
app/config/: setting.py
app/core/: base_model.py  base_query_params.py  database.py  dependencies.py  logger.py
app/db/fixtures/: user.json
app/modules/system/user/: controller.py  model.py  schema.py  service.py
env/: .env  .env.dev  .env.example  .env.prod
src/api/: register_routers.py
src/common/: exceptions.py  response.py
src/config/: setting.py
src/core/: base_controller.py  base_query_params.py  logger.py
src/modules/post/: controller.py
src/modules/product/: controller.py
src/modules/system/user/: controller.py
src/modules/user copy/: controller.py
